typescript/checker/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts.stderr
error: TS2464 {
    span: Span {
        lo: BytePos(
            46,
        ),
        hi: BytePos(
            49,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:4:5
  |
4 |     [b]: 0,
  |     ^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            58,
        ),
        hi: BytePos(
            64,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:5:5
  |
5 |     [true]: 1,
  |     ^^^^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            73,
        ),
        hi: BytePos(
            77,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:6:5
  |
6 |     [[]]: 0,
  |     ^^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            86,
        ),
        hi: BytePos(
            90,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:7:5
  |
7 |     [{}]: 0,
  |     ^^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            99,
        ),
        hi: BytePos(
            110,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:8:5
  |
8 |     [undefined]: undefined,
  |     ^^^^^^^^^^^

error: TS2464 {
    span: Span {
        lo: BytePos(
            127,
        ),
        hi: BytePos(
            133,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/computedProperties/computedPropertyNames5_ES6.ts:9:5
  |
9 |     [null]: null
  |     ^^^^^^

